<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bjw.myappprotfolio.MainActivity">

    <TextView
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/top_message"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/btn_start_movies_app"
        android:text="@string/popular_movies"
        style="@style/button"/>
    <Button
        android:id="@+id/btn_start_stock_app"
        android:text="@string/stock_hawk"
        style="@style/button"/>
    <Button
        android:id="@+id/btn_start_build_app"
        android:text="@string/build_it_bigger"
        style="@style/button"/>
    <Button
        android:id="@+id/btn_start_make_app"
        android:text="@string/make_your_app_material"
        style="@style/button"/>
    <Button
        android:id="@+id/btn_start_go_app"
        android:text="@string/go_ubiquitous"
        style="@style/button"/>
    <Button
        android:id="@+id/btn_start_capstone_app"
        android:text="@string/capstone"
        style="@style/button"/>
</LinearLayout>
